--- a/alko-similar-client/public/app.css
+++ b/alko-similar-client/public/app.css
@@ -513,8 +513,12 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.invisible {
-  visibility: hidden;
+.m-1 {
+  margin: 0.25rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
 }
 
 .m-4 {
@@ -526,108 +530,84 @@ video {
   margin-right: auto;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.ml-8 {
+  margin-left: 2rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.ml-\[0\.2rem\] {
+  margin-left: 0.2rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mt-\[0\.1rem\] {
+  margin-top: 0.1rem;
 }
 
 .flex {
   display: flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
-}
-
-.h-0 {
-  height: 0px;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-1\/4 {
-  height: 25%;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-screen {
-  height: 100vh;
 }
 
 .h-1\/2 {
   height: 50%;
 }
 
-.h-1\/6 {
-  height: 16.666667%;
+.h-1\/4 {
+  height: 25%;
 }
 
-.h-12 {
-  height: 3rem;
+.h-20 {
+  height: 5rem;
 }
 
-.h-14 {
-  height: 3.5rem;
+.h-4 {
+  height: 1rem;
 }
 
-.h-16 {
-  height: 4rem;
+.h-full {
+  height: 100%;
 }
 
-.w-full {
-  width: 100%;
+.h-screen {
+  height: 100vh;
 }
 
-.w-3\/4 {
-  width: 75%;
+.max-h-60 {
+  max-height: 15rem;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
-}
-
-.w-1\/6 {
-  width: 16.666667%;
-}
-
-.w-4\/6 {
-  width: 66.666667%;
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-1\/4 {
   width: 25%;
 }
 
-.w-12 {
-  width: 3rem;
-}
-
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-16 {
-  width: 4rem;
+.w-2\/6 {
+  width: 33.333333%;
 }
 
 .w-20 {
   width: 5rem;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
+}
+
+.w-5\/6 {
+  width: 83.333333%;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .max-w-screen-lg {
@@ -642,8 +622,8 @@ video {
   flex-direction: column;
 }
 
-.flex-col-reverse {
-  flex-direction: column-reverse;
+.place-content-between {
+  place-content: space-between;
 }
 
 .content-center {
@@ -658,25 +638,35 @@ video {
   justify-content: center;
 }
 
-.justify-items-center {
-  justify-items: center;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
-.place-self-center {
-  place-self: center;
-}
-
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-.bg-blue-100 {
+.border {
+  border-width: 1px;
+}
+
+.border-4 {
+  border-width: 4px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.bg-ale {
   --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+  background-color: rgb(176 58 30 / var(--tw-bg-opacity));
 }
 
 .bg-blue-200 {
@@ -684,9 +674,204 @@ video {
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
+.bg-blue-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
+.bg-erikoisuus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(157 48 95 / var(--tw-bg-opacity));
+}
+
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.bg-greippinen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(171 225 251 / var(--tw-bg-opacity));
+}
+
+.bg-hedelm\E4inen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 112 34 / var(--tw-bg-opacity));
+}
+
+.bg-hedelm\E4inen_\&_aromikas_viskit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 153 38 / var(--tw-bg-opacity));
+}
+
+.bg-ipa {
+  --tw-bg-opacity: 1;
+  background-color: rgb(176 58 30 / var(--tw-bg-opacity));
+}
+
+.bg-kepe\E4_\&_viljainen_viskit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 227 127 / var(--tw-bg-opacity));
+}
+
+.bg-lager {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 165 66 / var(--tw-bg-opacity));
+}
+
+.bg-lempe\E4_\&_makeahko {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 120 0 / var(--tw-bg-opacity));
+}
+
+.bg-marjaisa {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 61 151 / var(--tw-bg-opacity));
+}
+
+.bg-marjaisa_\&_raikas {
+  --tw-bg-opacity: 1;
+  background-color: rgb(104 94 196 / var(--tw-bg-opacity));
+}
+
+.bg-maustetut_ja_muut {
+  --tw-bg-opacity: 1;
+  background-color: rgb(162 92 152 / var(--tw-bg-opacity));
+}
+
+.bg-mehev\E4_\&_hilloinen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(206 16 110 / var(--tw-bg-opacity));
+}
+
+.bg-muut_konjakit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(123 133 138 / var(--tw-bg-opacity));
+}
+
+.bg-pehme\E4_\&_hedelm\E4inen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 170 191 / var(--tw-bg-opacity));
+}
+
+.bg-pehme\E4_\&_hedelm\E4inen_viskit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 152 79 / var(--tw-bg-opacity));
+}
+
+.bg-pehme\E4_\&_kepe\E4 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 232 72 / var(--tw-bg-opacity));
+}
+
+.bg-pils {
+  --tw-bg-opacity: 1;
+  background-color: rgb(228 211 14 / var(--tw-bg-opacity));
+}
+
+.bg-pirte\E4_\&_hedelm\E4inen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(91 174 51 / var(--tw-bg-opacity));
+}
+
 .bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-roteva_\&_voimakas {
+  --tw-bg-opacity: 1;
+  background-color: rgb(109 51 50 / var(--tw-bg-opacity));
+}
+
+.bg-runsas_\&_paahteinen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(160 80 32 / var(--tw-bg-opacity));
+}
+
+.bg-runsas_\&_voimakas_viskit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(119 67 20 / var(--tw-bg-opacity));
+}
+
+.bg-sitruksinen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 238 97 / var(--tw-bg-opacity));
+}
+
+.bg-stout_\&_porter {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 27 14 / var(--tw-bg-opacity));
+}
+
+.bg-tastestyle_441 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(235 194 43 / var(--tw-bg-opacity));
+}
+
+.bg-tastestyle_443 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(136 83 51 / var(--tw-bg-opacity));
+}
+
+.bg-tastestyle_445 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(108 194 74 / var(--tw-bg-opacity));
+}
+
+.bg-tastestyle_447 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 133 173 / var(--tw-bg-opacity));
+}
+
+.bg-tastestyle_449 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 4 55 / var(--tw-bg-opacity));
+}
+
+.bg-tumma_lager {
+  --tw-bg-opacity: 1;
+  background-color: rgb(115 78 41 / var(--tw-bg-opacity));
+}
+
+.bg-vahva_lager {
+  --tw-bg-opacity: 1;
+  background-color: rgb(176 129 31 / var(--tw-bg-opacity));
+}
+
+.bg-vehn\E4olut {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 222 90 / var(--tw-bg-opacity));
+}
+
+.bg-vivahteikas_\&_kehittynyt {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 81 31 / var(--tw-bg-opacity));
+}
+
+.bg-vivahteikas_\&_ryhdik\E4s {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 129 166 / var(--tw-bg-opacity));
+}
+
+.bg-vivahteikas_\&_ryhdik\E4s_viskit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(77 110 177 / var(--tw-bg-opacity));
+}
+
+.bg-vs-konjakit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 195 0 / var(--tw-bg-opacity));
+}
+
+.bg-vsop-konjakit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 115 0 / var(--tw-bg-opacity));
+}
+
+.bg-xo-konjakit {
+  --tw-bg-opacity: 1;
+  background-color: rgb(137 83 47 / var(--tw-bg-opacity));
 }
 
 .bg-yellow-300 {
@@ -694,24 +879,13 @@ video {
   background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-4 {
   padding: 1rem;
 }
 
-.p-6 {
-  padding: 1.5rem;
-}
-
-.p-8 {
-  padding: 2rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-6 {
@@ -719,16 +893,22 @@ video {
   padding-right: 1.5rem;
 }
 
-.pb-1\/2 {
-  padding-bottom: 50%;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
-.pb-1\/4 {
-  padding-bottom: 25%;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
+.text-right {
+  text-align: right;
+}
+
+.font-locator {
+  font-family: locator-web, sans-serif;
 }
 
 .text-2xl {
@@ -736,12 +916,41 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-thin {
+  font-weight: 100;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
