--- a/alko-similar-client/src/css/app.css
+++ b/alko-similar-client/src/css/app.css
@@ -20,13 +20,13 @@
   position: absolute;
   width: 100%;
   height: 4px;
-  background-color: #e9e9e9;
+  background-color: rgb(229 231 235);
   border-radius: 6px;
 }
 .rc-slider-track {
   position: absolute;
   height: 4px;
-  background-color: #abe2fb;
+  background-color: rgb(248 113 113);
   border-radius: 6px;
 }
 .rc-slider-handle {
@@ -35,7 +35,7 @@
   height: 14px;
   margin-top: -5px;
   background-color: #fff;
-  border: solid 2px #96dbfa;
+  border: solid 2px rgb(153 27 27);
   border-radius: 50%;
   cursor: pointer;
   cursor: -webkit-grab;
@@ -44,8 +44,8 @@
   touch-action: pan-x;
 }
 .rc-slider-handle-dragging.rc-slider-handle-dragging.rc-slider-handle-dragging {
-  border-color: #57c5f7;
-  box-shadow: 0 0 0 5px #96dbfa;
+  border-color: rgb(220 38 38);
+  box-shadow: 0 0 0 5px rgb(153 27 27);
 }
 .rc-slider-handle:focus {
   outline: none;
@@ -53,18 +53,18 @@
 }
 .rc-slider-handle:focus-visible {
   border-color: #2db7f5;
-  box-shadow: 0 0 0 3px #96dbfa;
+  box-shadow: 0 0 0 3px rgb(153 27 27);
 }
 .rc-slider-handle-click-focused:focus {
-  border-color: #96dbfa;
+  border-color: rgb(153 27 27);
   box-shadow: unset;
 }
 .rc-slider-handle:hover {
-  border-color: #57c5f7;
+  border-color: rgb(220 38 38);
 }
 .rc-slider-handle:active {
-  border-color: #57c5f7;
-  box-shadow: 0 0 5px #57c5f7;
+  border-color: rgb(220 38 38);
+  box-shadow: 0 0 5px rgb(220 38 38);
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
@@ -105,7 +105,7 @@
   cursor: pointer;
 }
 .rc-slider-dot-active {
-  border-color: #96dbfa;
+  border-color: rgb(153 27 27);
 }
 .rc-slider-dot-reverse {
   margin-right: -4px;
